Aggiunti tutti i commenti nelle classi